# tw-migrate

./: .gitattributes  .gitignore  AGENTS.md  CONCEPTS.md  Cargo.toml  LICENSE  README.md  html.js  index.d.ts  index.js  insta.yaml  native.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  style-compiler.js
.github/: renovate.json
.github/workflows/: ci.yml  ecosystem.yml
crates/snapshots/: Cargo.toml  README.md
crates/snapshots/coverage/: html_workspaces.toml  safety.toml  styles.toml
crates/snapshots/snapshots/: cli_snapshots__cli_help.snap  cli_snapshots__cli_parser_failure.snap  cli_snapshots__html_workspaces__ambiguous_preprocessor_source.snap  cli_snapshots__html_workspaces__generated_css_same_stem.snap  (+114 more)
crates/tw_migrate/: Cargo.toml
crates/tw_migrate/src/: arbitrary.rs  at_rules.rs  css_plan.rs  html_rewrite.rs  js_rewrite.rs  jsx_graph.rs  lib.rs  planner.rs  utilities.rs
ecosystem-ci/: candidates.md  commands.js  lifecycle.js  oracle.js  packages.js  projects.json  registry.js  run.js  vitest.config.js
ecosystem-ci/tests/: ecosystem.browser.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
rfcs/: batch-css-migration.md  browser-ecosystem-e2e.md  css-to-tailwind-migration-cli.md  preprocessor-and-html-migration.md
src/: animations.rs  arbitrary.rs  at_rules.rs  lib.rs  planner.rs  theme.rs  utilities.rs
test/: ecosystem-harness.test.js  migrate.test.js
(+275 files in other folders)
