[package]
name = "tw-migrate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "3.10.5", default-features = false, features = ["napi9"] }
napi-derive = "3.5.10"
oxc-css-parser = "0.0.7"
oxc_allocator = "0.140.0"
oxc_ast = "0.140.0"
oxc_ast_visit = "0.140.0"
oxc_parser = "0.140.0"
oxc_semantic = "0.140.0"
oxc_sourcemap = "8.1.2"
oxc_span = "0.140.0"
oxc_syntax = "0.140.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2.3.2"
